# chompers

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
examples/: README.md  basic_recording.ts  get-windows.ts  replay_buffer.ts  select_audio_device.ts  select_video_encoder.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  recorder.rs  window_info.rs
