[package]
edition = "2021"
name = "getexcited_chompers"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-record = { path = "./windows-record" }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
